# criterion-markdown

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: example_benchmark.rs
src/: discovery.rs  lib.rs  markdown.rs  model.rs
tests/: render_fixture.rs  render_real_criterion.rs
