[package]
name = "criterion-markdown"
version = "0.1.2"
edition = "2021"
rust-version = "1.86"
description = "Reads criterion benchmark results and renders a markdown table."
license = "Apache-2.0"
readme = "README.md"
keywords = ["criterion", "benchmark", "markdown"]
categories = ["development-tools::profiling", "text-processing"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "example_benchmark"
harness = false
